# release-utils-rs

./: .deny.toml  Cargo.toml  README.md
.github/: renovate.json
.github/workflows/: ci.yaml  release.yaml
auto-release/: Cargo.toml  README.md
auto-release/src/: args.rs  main.rs
docs/: code-of-conduct.md
release-utils/: Cargo.toml  README.md
release-utils/src/: cargo.rs  cmd.rs  crate_registry.rs  env.rs  git.rs  github.rs  lib.rs  package.rs  release.rs  tmp.rs
release-utils/tests/integration/: cargo.rs  cmd.rs  git.rs  github.rs  main.rs  package.rs  tmp.rs
src/: cmd.rs  git.rs  lib.rs  package.rs  release.rs
tests/: release_test.rs
tests/integration/: cmd.rs  git.rs  main.rs  package.rs
xtask/: Cargo.toml
xtask/src/: main.rs
