# Copyright 2023 Google LLC
#
# Licensed under the Apache License, Version 2.0 <LICENSE-APACHE or
# https://www.apache.org/licenses/LICENSE-2.0> or the MIT license
# <LICENSE-MIT or https://opensource.org/licenses/MIT>, at your
# option. This file may not be copied, modified, or distributed
# except according to those terms.

[package]
name = "release-utils"
version = "0.2.0"
edition = "2021"
license = "MIT OR Apache-2.0"
rust-version = "1.70"

[dependencies]
anyhow = "1.0.0"
cargo_metadata = "0.18.0"
crates-index = "2.3.0"
ureq = { version = "2.8.0", features = ["http-interop"] }

[workspace]
members = ["xtask"]
