# Copyright 2024 Google LLC
#
# Licensed under the Apache License, Version 2.0 <LICENSE-APACHE or
# https://www.apache.org/licenses/LICENSE-2.0> or the MIT license
# <LICENSE-MIT or https://opensource.org/licenses/MIT>, at your
# option. This file may not be copied, modified, or distributed
# except according to those terms.

[package]
name = "auto-release"
categories = ["command-line-utilities", "development-tools"]
description = "Command-line utility for automatically releasing Rust code"
keywords = ["cli", "release", "github", "workflow", "automation"]

version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true

[dependencies]
release-utils = { version = "0.5.0", path = "../release-utils" }
