# Copyright 2024 Google LLC
#
# Licensed under the Apache License, Version 2.0 <LICENSE-APACHE or
# https://www.apache.org/licenses/LICENSE-2.0> or the MIT license
# <LICENSE-MIT or https://opensource.org/licenses/MIT>, at your
# option. This file may not be copied, modified, or distributed
# except according to those terms.

[package]
name = "release-utils"
categories = ["development-tools"]
description = "Utilities for automatically releasing Rust code"
keywords = ["release", "github", "automation"]

version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true

[dependencies]
anyhow = "1.0.0"
cargo_metadata = "0.18.0"
crates-index = "2.3.0"
ureq = { version = "2.8.0", features = ["http-interop"] }
